--- a/src/components/App.css
+++ b/src/components/App.css
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+.App {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -26,6 +26,11 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.App-button {
+  color: blue;
+  font-size: 1.5rem;
 }
 
 @keyframes App-logo-spin {
