--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,40 +1,22 @@
-.container {
-    text-align: center;
+.logo {
+  height: 30vmin;
+  pointer-events: none;
+  margin-bottom: 50px;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+
+  .rotate {
+    animation: rotate-spin infinite 20s linear;
   }
-  
-  .logo {
-    height: 30vmin;
-    pointer-events: none;
-    margin-bottom: 50px;
+}
+
+@keyframes rotate-spin {
+  from {
+    transform: rotate(0deg);
   }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .logo {
-      animation: rotate-spin infinite 20s linear;
-    }
+
+  to {
+    transform: rotate(360deg);
   }
-  
-  /* .App {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  
-  .App-link {
-    color: #61dafb;
-  }
-   */
-  @keyframes rotate-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
+}
